added new files

--- a/index.html
+++ b/index.html
@@ -8,32 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
 </head>
-<style>
-    .one:link {
-        color: lightgrey;
-    }
 
-    .one:visted {
-        color: white;
-    }
-
-    .one:hover {
-        color: aqua;
-    }
-
-    .one:active {
-        color: pink;
-    }
-
-    .solid {
-        border-style: solid;
-        border-color: white;
-    }
-
-    body {
-        background-color: rgb(75, 68, 68);
-    }
-</style>
 
 <body>
     <div id="topofpage"></div>
@@ -46,7 +21,12 @@
     </center>
     <p class="solid"></p>
     <p>Welcome to my portolio!</p>
-    <img <img <img <p>I am married to one amazing woman, and I have an awesome daughter.With another one on the way.</p>
+    <img src="./images/me2.jpg" alt="dress whites">
+    <img src="./images/mywife.jpeg" alt="wife">
+    <img src="./images/family3.png" alt="us three">
+    <p>I am married to one amazing woman, and I have an awesome daughter. With another one on the way!</p>
+    <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change of a
+        better life for my family. I was bron in Tyler, Texas, and now live in Dallas, Texas.</p>
 </body>
 
 </html>
