added more to my paragraph

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <img src="./images/family3.png" alt="us three">
     <p>I am married to one amazing woman, and I have an awesome daughter. With another one on the way!</p>
     <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change of a
-        better life for my family. I was bron in Tyler, Texas, and now live in Dallas, Texas.</p>
+        better life for my family. I was bron in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
+        experiences with new and interesting things or ideas to better myself, as well as people around me.</p>
 </body>
 
 </html>
