--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coreys Portfolio</title>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
 </head>
 
 
 <body>
-    <div id="topofpage"></div>
     <center>
         <h1 style="color:aqua;">Corey Patterson</h1>
         <a class="one" href="#topofpage">Home</a>
@@ -24,6 +23,7 @@
     <img src="./images/me2.jpg" alt="dress whites">
     <img src="./images/mywife.jpeg" alt="wife">
     <img src="./images/family3.png" alt="us three">
+    <div id="#aboutme"></div>
     <p>I am married to one amazing woman, and I have an awesome daughter. With another one on the way!</p>
     <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change of a
         better life for my family. I was bron in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
