fixed grammatical errors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="one" href="#contactinfo">ContactMe</a>
     </center>
     <p class="solid"></p>
-    <p>Welcome to my portolio!</p>
+    <p>Welcome to my portfolio!</p>
     <img src="./images/me2.jpg" alt="dress whites">
     <img src="./images/mywife.jpeg" alt="wife">
     <img src="./images/family3.png" alt="us three">
@@ -28,6 +28,7 @@
     <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change of a
         better life for my family. I was bron in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
         experiences with new and interesting things or ideas to better myself, as well as people around me.</p>
+
 </body>
 
 </html>
