added more photos, and text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coreys Portfolio</title>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
+    <style>
+        p {
+            font-size: 30px;
+            color: white;
+        }
+    </style>
 </head>
 
 
@@ -14,21 +20,33 @@
     <center>
         <h1 style="color:aqua;">Corey Patterson</h1>
         <a class="one" href="#topofpage">Home</a>
-        <a class="one" href="#aboutme">AboutMe</a>
+        <a class="one" href="#aboutme">About Me</a>
         <a class="one" href="#projects">Projects</a>
-        <a class="one" href="#contactinfo">ContactMe</a>
+        <a class="one" href="#contactinfo">Contact Me</a>
     </center>
     <p class="solid"></p>
     <p>Welcome to my portfolio!</p>
     <img src="./images/me2.jpg" alt="dress whites">
     <img src="./images/mywife.jpeg" alt="wife">
-    <img src="./images/family3.png" alt="us three">
-    <div id="#aboutme"></div>
+    <img src="./images/kerry1.png" alt="Married">
+
+    <h3 style="color:silver;">About Me</h3>
     <p>I am married to one amazing woman, and I have an awesome daughter. With another one on the way!</p>
     <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change of a
-        better life for my family. I was bron in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
+        better life for my family. I was born in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
         experiences with new and interesting things or ideas to better myself, as well as people around me.</p>
+    <img src="./images/family3.png" alt="us three">
+    <img src="./images/christmas1.jpg" alt="Chirstmas">
+    <img src="./images/stinker1.jpg" alt="My Baby">
+    <p class="solid"></p>
+    <h2 style="color:silver;">Projects</h2>
+    <p class="solid"></p>
 
+    <h4 style="color:silver;">Contact Information</h4>
+    <p>Phone-(903)559-9981</p>
+    <p>
+        <Email->coreyapat19@gmail</Email->
+    </p>
 </body>
 
 </html>
