I added anchor points within the site

--- a/index.html
+++ b/index.html
@@ -17,36 +17,49 @@
 
 
 <body>
-    <center>
-        <h1 style="color:aqua;">Corey Patterson</h1>
-        <a class="one" href="#topofpage">Home</a>
-        <a class="one" href="#aboutme">About Me</a>
-        <a class="one" href="#projects">Projects</a>
-        <a class="one" href="#contactinfo">Contact Me</a>
-    </center>
+    <span id="topofpage">
+        <center>
+            <h1 style="color:aqua;">Corey Patterson</h1>
+            <a class="one" href="#topofpage">Home</a>
+            <a class="one" href="#aboutme">About Me</a>
+            <a class="one" href="#projects">Projects</a>
+            <a class="one" href="#contact">Contact Information</a>
+        </center>
+    </span>
     <p class="solid"></p>
     <p>Welcome to my portfolio!</p>
     <img src="./images/me2.jpg" alt="dress whites">
     <img src="./images/mywife.jpeg" alt="wife">
     <img src="./images/kerry1.png" alt="Married">
-
-    <h3 style="color:silver;">About Me</h3>
-    <p>I am married to one amazing woman, and I have an awesome daughter. With another one on the way!</p>
-    <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change of a
-        better life for my family. I was born in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
-        experiences with new and interesting things or ideas to better myself, as well as people around me.</p>
-    <img src="./images/family3.png" alt="us three">
-    <img src="./images/christmas1.jpg" alt="Chirstmas">
-    <img src="./images/stinker1.jpg" alt="My Baby">
+    <span id="aboutme">
+        <h3 style="color:silver;" id="#aboutme">About Me</h3>
+        <p>I am married to one amazing woman, and I have an awesome daughter. With another one on the way!</p>
+        <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change
+            of a
+            better life for my family. I was born in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
+            experiences with new and interesting things or ideas to better myself, as well as people around me.</p>
+        <img src="./images/family3.png" alt="us three">
+        <img src="./images/christmas1.jpg" alt="Chirstmas">
+        <img src="./images/stinker1.jpg" alt="My Baby">
+    </span>
     <p class="solid"></p>
-    <h2 style="color:silver;">Projects</h2>
+    <span id="projects">
+        <h2 style="color:silver;">Projects</h2>
+        <p>Welcome to my projects!</p>
+        <h5 style="color:aqua;">My Creations:</h5>
+        <p>Day Trip Generator: https://github.com/coreyapat/Day_Trip_Generator.git</p>
+        <h6 style="color:aqua;">Group Creations:</h6>
+        <p>N/A</p>
+    </span>
     <p class="solid"></p>
-
-    <h4 style="color:silver;">Contact Information</h4>
-    <p>Phone-(903)559-9981</p>
-    <p>
-        <Email->coreyapat19@gmail</Email->
-    </p>
+    <span id="contact">
+        <h4 style="color:silver;">Contact Information</h4>
+        <p>Phone-(903)559-9981</p>
+        <p>
+            <Email->coreyapat19@gmail</Email->
+        </p>
+    </span>
+    <a class="one" href="#topofpage">Home</a>
 </body>
 
 </html>
