--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" type="text/css" href="portfolio.css">
     <style>
         p {
-            font-size: 30px;
             color: white;
+            font-size: 35px;
         }
     </style>
 </head>
-
 
 <body>
     <span id="topofpage">
@@ -33,11 +32,13 @@
     <img src="./images/kerry1.png" alt="Married">
     <span id="aboutme">
         <h3 style="color:silver;" id="#aboutme">About Me</h3>
-        <p>I am married to one amazing woman, and I have an awesome daughter. With another one on the way!</p>
+        <p>Hello! My name is Corey Patterson. I am married to one amazing woman, and I have an awesome daughter. With
+            another one on the way!</p>
         <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change
             of a
             better life for my family. I was born in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
-            experiences with new and interesting things or ideas to better myself, as well as people around me.</p>
+            experiences with new and interesting things or ideas to better myself, as well as people around me. My
+            family is my biggest motivation, without them, I would not be where I am today.</p>
         <img src="./images/family3.png" alt="us three">
         <img src="./images/christmas1.jpg" alt="Chirstmas">
         <img src="./images/stinker1.jpg" alt="My Baby">
