--- a/index.html
+++ b/index.html
@@ -45,19 +45,33 @@
     </span>
     <p class="solid"></p>
     <span id="projects">
-        <h2 style="color:silver;">Projects</h2>
-        <p>Welcome to my projects!</p>
-        <h5 style="color:aqua;">My Creations:</h5>
-        <p>Day Trip Generator: https://github.com/coreyapat/Day_Trip_Generator.git</p>
-        <h6 style="color:aqua;">Group Creations:</h6>
-        <p>N/A</p>
+        <center>
+            <h2 style="color:silver;">Projects</h2>
+        </center>
+        <center>
+            <p>Welcome to my projects!</p>
+        </center>
+        <center>
+            <h5 style="color:silver;">My Creations:</h5>
+        </center>
+        <center>
+            <p>Day Trip Generator: https://github.com/coreyapat/Day_Trip_Generator.git</p>
+        </center>
+        <center>
+            <h6 style="color:silver;">Group Creations:</h6>
+        </center>
+        <center>
+            <p>N/A</p>
+        </center>
     </span>
     <p class="solid"></p>
     <span id="contact">
-        <h4 style="color:silver;">Contact Information</h4>
-        <p>Phone-(903)559-9981</p>
-        <p>
-            <Email->coreyapat19@gmail</Email->
+        <center>
+            <h4 style="color:silver;">Contact Information</h4>
+            <p>Phone-(903)559-9981</p>
+            <p>
+                <email>coreyapat19@gmail.com</email>
+        </center>
         </p>
     </span>
     <a class="one" href="#topofpage">Home</a>
