Changed the size of photos, centered everything

--- a/index.html
+++ b/index.html
@@ -26,39 +26,50 @@
         </center>
     </span>
     <p class="solid"></p>
-    <p>Welcome to my portfolio!</p>
-    <img src="./images/me2.jpg" alt="dress whites">
-    <img src="./images/mywife.jpeg" alt="wife">
-    <img src="./images/kerry1.png" alt="Married">
-    <span id="aboutme">
-        <h3 style="color:silver;" id="#aboutme">About Me</h3>
-        <p>Hello! My name is Corey Patterson. I am married to one amazing woman, and I have an awesome daughter. With
+    <center>
+        <p>Welcome to my portfolio!</p>
+        <img src="./images/me2.jpg" alt="dress whites">
+        <img src="./images/mywife.jpeg" alt="wife">
+        <img src="./images/kerry1.png" alt="Married">
+        <span id="aboutme">
+    </center>
+    <center>
+        <h3 style="color:aqua;" id="#aboutme">About Me</h3>
+        <p>Hello! My name is Corey Patterson. I am married to one amazing woman, and I have an awesome daughter.
+            With
             another one on the way!</p>
-        <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the change
+        <p>I am 24 years old, with a love for technology. I was in the navy for about 6 years before making the
+            change
             of a
-            better life for my family. I was born in Tyler, Texas, and now live in Dallas, Texas, and hoping to grow my
-            experiences with new and interesting things or ideas to better myself, as well as people around me. My
+            better life for my family. I was born in Tyler, Texas, and now live in Dallas, Texas, and hoping to
+            grow
+            my
+            experiences with new and interesting things or ideas to better myself, as well as people around me.
+            My
             family is my biggest motivation, without them, I would not be where I am today.</p>
+    </center>
+    <center>
         <img src="./images/family3.png" alt="us three">
         <img src="./images/christmas1.jpg" alt="Chirstmas">
         <img src="./images/stinker1.jpg" alt="My Baby">
-    </span>
+        </span>
+    </center>
     <p class="solid"></p>
     <span id="projects">
         <center>
-            <h2 style="color:silver;">Projects</h2>
+            <h2 style="color:aqua;">Projects</h2>
         </center>
         <center>
             <p>Welcome to my projects!</p>
         </center>
         <center>
-            <h5 style="color:silver;">My Creations:</h5>
+            <h5 style="color:aqua;">My Creations:</h5>
         </center>
         <center>
             <p>Day Trip Generator: https://github.com/coreyapat/Day_Trip_Generator.git</p>
         </center>
         <center>
-            <h6 style="color:silver;">Group Creations:</h6>
+            <h6 style="color:aqua;">Group Creations:</h6>
         </center>
         <center>
             <p>N/A</p>
@@ -67,7 +78,7 @@
     <p class="solid"></p>
     <span id="contact">
         <center>
-            <h4 style="color:silver;">Contact Information</h4>
+            <h4 style="color:aqua;">Contact Information</h4>
             <p>Phone-(903)559-9981</p>
             <p>
                 <email>coreyapat19@gmail.com</email>
