--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         p {
             color: white;
-            font-size: 35px;
+            font-size: 25px;
         }
     </style>
 </head>
@@ -85,7 +85,8 @@
         </center>
         </p>
     </span>
-    <a class="one" href="#topofpage">Home</a>
+    <center><a class="one" href="#topofpage">Home</a>
+    </center>
 </body>
 
 </html>
