changed the bottom home link to back to the top

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </center>
         </p>
     </span>
-    <center><a class="one" href="#topofpage">Home</a>
+    <center><a class="one" href="#topofpage">Back To The Top</a>
     </center>
 </body>
 
